# rs-mojave_chain

./: .gitignore  Cargo.toml  justfile
.github/workflows/: rust.yml
cmd/: update_ethrex_rev.sh
cmd/mojave/: Cargo.toml  cli.rs  command.rs  initializer.rs  lib.rs  logging.rs  mojave.rs  network.rs  options.rs  sequencer_options.rs
crates/abci/: Cargo.toml
crates/abci/src/: client.rs  config.rs  server.rs
crates/block-builder/: Cargo.toml
crates/block-builder/src/: context.rs  service.rs
crates/full-node/: Cargo.toml
crates/full-node/src/: dummy.rs
crates/json-rpc/: Cargo.toml
crates/json-rpc/src/: filter.rs
crates/json-rpc/src/api/: eth.rs  eth_pubsub.rs  net.rs  web3.rs
crates/json-rpc/src/server/: http.rs  mod.rs  websocket.rs
crates/l2/: Cargo.toml
crates/l2/src/: lib.rs
crates/l2/src/sequencer/: block_producer.rs  errors.rs  l1_committer.rs  l1_proof_sender.rs  l1_watcher.rs  metrics_gatherer.rs  mod.rs  proof_coordinator.rs  utils.rs
crates/networking/: Cargo.toml
crates/networking/src/: lib.rs  sync.rs
crates/networking/src/rpc/: block.rs  mod.rs  transaction.rs  utils.rs
crates/networking/src/rpc/clients/mojave/: errors.rs  mod.rs
crates/networking/src/rpc/full_node/: block.rs  mod.rs  transaction.rs
crates/networking/src/rpc/full_node/types/: ordered_block.rs
crates/networking/src/rpc/sequencer/: mod.rs  transaction.rs
crates/node/: Cargo.toml
crates/node/src/: args.rs  error.rs  lib.rs  service.rs
crates/node/src/backend/: error.rs
crates/node/src/backend/api/: abci.rs  eth.rs  eth_pubsub.rs  net.rs  web3.rs
crates/proof-coordinator/: Cargo.toml
crates/proof-coordinator/src/: errors.rs  lib.rs
crates/prover/src/: lib.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: error.rs  eth.rs  lib.rs  net.rs  web3.rs
crates/rpc/src/server/: websocket.rs
crates/subscriber/: Cargo.toml
crates/subscriber/src/: main.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  rpc.rs
crates/utils/: Cargo.toml
crates/utils/src/: unique_heap.rs
test_data/: genesis.json
