[workspace]
members = ["cmd/mojave", "crates/json-rpc", "crates/full-node", "crates/utils"]
resolver = "2"

[workspace.dependencies]
mojave-chain-json-rpc = { path = "crates/json-rpc" }
mojave-chain-full-node = { path = "crates/full-node" }
mojave-chain-utils = { path = "crates/utils" }

tokio = { version = "1", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
trait-variant = "0.1"
clap = { version = "4.5", features = ["derive"] }

# error handling
thiserror = "2"
anyhow = { version = "1.0" }

# ethrex
ethrex = { git = "https://github.com/1sixtech/ethrex", branch = "main" }
ethrex-vm = { git = "https://github.com/1sixtech/ethrex", branch = "main" }
ethrex-storage = { git = "https://github.com/1sixtech/ethrex", branch = "main" }
ethrex-storage-rollup = { git = "https://github.com/1sixtech/ethrex", branch = "main" }
ethrex-l2 = { git = "https://github.com/1sixtech/ethrex", branch = "main" }
ethrex-p2p = { git = "https://github.com/1sixtech/ethrex", branch = "main" }
ethrex-common = { git = "https://github.com/1sixtech/ethrex", branch = "main" }
ethrex-rpc = { git = "https://github.com/1sixtech/ethrex", branch = "main" }
ethrex-blockchain = { git = "https://github.com/1sixtech/ethrex", branch = "main" }
