[package]
name = "mojave"
version = "0.1.0"
edition = "2021"

[lib]
name = "mojave"
path = "./lib.rs"

[[bin]]
name = "mojave"
path = "./mojave.rs"

[features]
default = []
metrics = ["ethrex-blockchain/metrics", "ethrex-l2/metrics"]

[dependencies]
anyhow = { workspace = true }

# misc
clap = { workspace = true, features = ["derive", "env", "string"] }

# ethrex
ethrex = { workspace = true }
ethrex-blockchain = { workspace = true }
ethrex-common = { workspace = true }
ethrex-l2 = { workspace = true }
ethrex-metrics = { workspace = true }
ethrex-p2p = { workspace = true }
ethrex-rpc = { workspace = true }
ethrex-storage = { workspace = true }
ethrex-storage-rollup = { workspace = true }
ethrex-vm = { workspace = true }

k256 = { version = "0.13.3", features = ["ecdh"] }

lazy_static = { workspace = true }

local-ip-address = { version = "0.6" }
mojave-chain-json-rpc = { workspace = true }
mojave-chain-utils = { workspace = true }
secp256k1 = { workspace = true }

serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

tokio-util = { workspace = true }

# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
