[package]
name = "drip-chain-abci"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
futures = { workspace = true }
prost = "0.13"
serde = { workspace = true }

# tendermint
tendermint = "0.40"
tendermint-abci = "0.40"
tendermint-config = "0.40"
tendermint-proto = "0.40"
tendermint-rpc = { version = "0.40", features = [
  "http-client",
  "websocket-client",
] }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }


# misc
thiserror.workspace = true
