[package]
name = "mojave-chain-json-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonrpsee = { version = "0.24", features = ["server"] }
hyper = "1.6.0"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors"] }

# misc
tracing = { workspace = true }
trait-variant = { workspace = true }
