[package]
name = "drip-chain-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
# our own crates
drip-chain-types.workspace = true

# async runtime and middleware
futures.workspace = true
hyper = "1.6.0"
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tower = "0.4"
tower-http = { version = "0.6", features = ["cors"] }

# misc
tracing.workspace = true
trait-variant.workspace = true
jsonrpsee = { version = "0.24", features = ["server"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
