[package]
name = "mojave-chain-types"
version = "0.1.0"
edition = "2024"

[dependencies]
revm = { version = "19.0.0", features = [
    "serde",
    "std",
    "serde-json",
    "optional_no_base_fee",
    "optional_block_gas_limit",
], default-features = false }

alloy-eips = { version = "0.12", features = ["serde"] } 
alloy-network ={ version = "0.19" }

serde = { workspace = true, features = ["derive"] }

ethrex-rpc ={ workspace = true }
ethrex-common = { workspace = true }
